--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "devDependencies": {
         "axios": "^0.19.0",
         "bootstrap": "^4.3.1",
+        "copy-webpack-plugin": "^4.6.0",
         "cross-env": "^5.1",
+        "imagemin-mozjpeg": "^9.0.0",
+        "imagemin-webpack-plugin": "^2.4.2",
         "jquery": "^3.4.1",
         "laravel-mix": "^4.1.2",
         "lodash": "^4.17.14",
@@ -26,6 +29,7 @@
     },
     "dependencies": {
         "http": "0.0.0",
+        "laravel-mix-imagemin": "^1.0.3",
         "noty": "^3.2.0-beta",
         "redis": "^2.8.0",
         "socket.io": "^2.2.0",
